# math

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: Exp.cpp  Log.cpp  Pow.cpp  Sin.cpp  Sqrt.cpp
python/: sqrt.py
src/: math.hpp
test/: exp_test.cpp  log_test.cpp  sin_test.cpp  sqrt_test.cpp
